# torch-voxel-subsample

./: LICENSE  README.md  pyproject.toml
src/torch_voxel_subsample/: __init__.py  module.cpp  voxel_subsample.cpp  voxel_subsample.h  voxel_subsample_deterministic.h
tests/: test_voxel_subsample.py
